  dates/time

- :func:`packages.get_packagepath` to get the path to an R package

- module :mod:`rpy2.robjects.help` to expose the R help system to Python

- Metaclass utilities in :mod:`rpy2.robjects.methods`, allowing to reflect
  automatically R S4 classes as Python classes.

:mod:`rpy2.rinterface`:

- NA_Complex and :class:`NAComplexType` for missing complex values.

:mod:`rpy2.rlike`:

- :class:`container.OrdDict` get proper methods :meth:`keys` and `get`

Changes
-------

:mod:`rpy2.robjects`:

- NA_bool, NA_real, NA_integer, NA_character and NA_complex are now
  deprecated (and removed).
  NA_Logical, NA_Real, NA_Integer, NA_Character, NA_Complex should be used.


Release 2.1.4
=============

New features
------------

- :mod:`rpy2.robjects.lib.ggplot2` now has the functions :func:`limits`,
  :func:`xlim`, :func:`ylim` exposed (patch contributed anonymously)

Bugs fixed
----------

- Install script when the BLAS library used by R is specified as a library
  file (patch by Michael Kuhn)


Release 2.1.3
=============

Bugs fixed
----------

- Spurious error message when using DataFrame.from_csvfile() without
  specifying col_names  or row_names

- Patch to finally compile with Python < 2.6 (contribDuted by Denis Barbier)


Release 2.1.2
=============

New Features
------------

:mod:`rpy2.robjects`:

- NA_Logical, NA_Real, NA_Integer, NA_Character from :mod:`rpy2.rinterface` 
  are imported by robjects.

Changes
-------

:mod:`rpy2.robjects`:

- NA_bool, NA_real, NA_integer, NA_character and NA_complex are now
  robjects-level vectors
  (they were rinterface-level vectors).
  Consider using the rinterface-defined NAs instead of them.

Bugs fixed
----------

- Missing conditional C definition to compile with Python 2.4 # issue 38

- Fixed error when calling robjects.vectors.Vector.iteritems() on an R 
  vector without names

- Fixed automatic conversion issues (issue #41)


Release 2.1.1
=============

Bugs fixed
----------

- Issues with NA values # issue 37
